--- a/tempAnalysis.Rmd
+++ b/tempAnalysis.Rmd
@@ -84,7 +84,7 @@ For the Random Forest analysis we need a response variable.  For now just just t
 	table(TS_CHLA,useNA='ifany') #note there are five missing values
 ```
 
-### Analysis1:  Run varSelRF multiple time to see if the same variables are selected each time.
+### Analysis1: GIS VARIABLES: Run varSelRF multiple time to see if the same variables are selected each time.
 
 
 ```{r run_varSelRF, echo=FALSE, cache=TRUE} 
@@ -104,6 +104,8 @@ For the Random Forest analysis we need a response variable.  For now just just t
 				rfGIS<-varSelRF(Pgis[keep,],TS_CHLA[keep],ntree=NTREE,ntreeIterat=Niterations,
 												vars.drop.frac=NULL,vars.drop.num=dropNum)
 		Out[[i]]<-rfGIS$selected.vars
+		save(list=c("i","Out"),file="Pgis.rda")
+		print(i)
 		}
 	
 	#summarize variables
@@ -114,13 +116,55 @@ For the Random Forest analysis we need a response variable.  For now just just t
   }
 	summDF<-summDF[order(summDF$Percent,decreasing=T),]
   summDF
+  require(knitr)
+  write(kable(summDF),"gis_variable_summary.md")
+  lapply(Out,write,"gis_selected_variables.csv",append=T,ncolumns=1000)
 
 ```
 
-### Analysis2:  Alternatively we could use varSelRFBoot to bootstrap the analysis
+### Analysis2: ALL VARIABLES (GIS+WQ): Run varSelRF multiple time to see if the same variables are selected each time.
 
 
-```{r run_varSelRFBoot, echo=FALSE, cache=TRUE} 
+```{r run_varSelRF, echo=FALSE, cache=TRUE} 
+#run for all predictors (GIS + WQ)
+	#intial conditions:
+		NTREE<-10000 #(10000) number of trees for first run
+		Niterations<-5000 #(5000) number of trees for subsequent runs
+		dropNum<-1 # number of variables to drop after each iteration
+		numRun<-100 #number of times to repeat the rf
+	
+	#select complete cases
+		keep<-complete.cases(Pall,TS_CHLA)
+
+	#run rf
+		Out<-vector("list",numRun)
+			for(i in c(1:numRun)){
+				rfALL<-varSelRF(Pall[keep,],TS_CHLA[keep],ntree=NTREE,ntreeIterat=Niterations,
+												vars.drop.frac=NULL,vars.drop.num=dropNum)
+		Out[[i]]<-rfALL$selected.vars
+		save(list=c("i","Out"),file="Pall.rda")
+		print(i)
+		}
+	
+	#summarize variables
+	summDF<-data.frame()
+	uniqueVar<-unique(unlist(Out))
+  for(i in uniqueVar){
+  	summDF<-rbind(summDF,data.frame(Variable=i,Percent=sum(unlist(Out)%in%i)/numRun))
+  }
+	summDF<-summDF[order(summDF$Percent,decreasing=T),]
+  summDF
+  require(knitr)
+  write(kable(summDF),"all_variable_summary.md")
+  lapply(Out,write,"all_selected_variables.csv",append=T,ncolumns=10000)
+
+```
+
+### Analysis3:  Alternatively we could use varSelRFBoot to bootstrap the analysis
+
+Not working so not currently evaulated.
+
+```{r run_varSelRFBoot, echo=FALSE, eval=FALSE, cache=TRUE} 
 #run for all GIS predictors
 	#intial conditions:
 		NTREE<-100 #(1000) number of trees for first run
