--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -866,3 +866,14 @@
   year={1991},
   publisher={Elsevier}
 }
+
+@article{diaz2006gene,
+  title={Gene selection and classification of microarray data using random forest},
+  author={D{\'\i}az-Uriarte, Ram{\'o}n and De Andres, Sara Alvarez},
+  journal={BMC bioinformatics},
+  volume={7},
+  number={1},
+  pages={3},
+  year={2006},
+  publisher={BioMed Central Ltd}
+}
