first run completed

--- a/hkm2014.md
+++ b/hkm2014.md
@@ -1,6 +1,5 @@
 
 
-
 Environmental Determinants of Lake Trophic Status in the Conterminous United States: A Data Mining Approach
 ====================================================================
 
@@ -14,7 +13,7 @@ Environmental Determinants of Lake Trophic Status in the Conterminous United Sta
 
 Abstract
 --------
-Productivity of lentic ecosystems has been well studied and predicting the algal community response is known to be largely a function of nitrogen and phosphorus.   Most existing predictive models take advantage of this well studied relationship to predict chlorphyl a and lake trophic state.  While this provides reliable predictions, it requires *in situ* water quality data in order to paramterize the model.  This limits the application of these models to lakes with existing and, more importanly, available water quality data.  To expand our ability to predict in lakes without water quality data, we take advantage of the availability of a large national lakes water quality database, land use/land cover data, lake morphometry data, other universally available data, and modern data mining approaches to build and assess alternative models of lake tropic state that may be more universally applied.  We use random forests and random forest variable selection to identify variables to be used for predicting trophic status and we compare the classification accuracy of a variety of existing and novel models.  Models based on nutrients alone predict trophic state with and average of XX% accuracy.  Models build with universally available data alone are able to correctluy predict trophic state, on average, xx% of the time.  Adding in additional variables to the classic models of Chlorophyl *a* based trophic state improves predictions only by a small percentage.  These results suggest that when *in situ* data are availble, additional variables do not appreciable improve predictions of trophic state.  Additionally, reliable predictions of trophic state are possible without *in situ* data allowing for a much broader application of trophic state models than has been previously applied.  
+Productivity of lentic ecosystems has been well studied and predicting the algal community response is known to be largely a function of nitrogen and phosphorus.   Most existing predictive models take advantage of this well studied relationship to predict chlorphyl a and lake trophic state.  While this provides reliable predictions, it requires *in situ* water quality data in order to paramterize the model.  This limits the application of these models to lakes with existing and, more importanly, available water quality data.  To expand our ability to predict in lakes without water quality data, we take advantage of the availability of a large national lakes water quality database, land use/land cover data, lake morphometry data, other universally available data, and modern data mining approaches to build and assess alternative models of lake tropic state that may be more universally applied.  We use random forests and random forest variable selection to identify variables to be used for predicting trophic status and we compare the classification accuracy of a variety of existing and novel models.  Models based on nutrients alone predict trophic state with and average of XX% accuracy.  Models build with universally available data alone are able to correctly predict trophic state, on average, xx% of the time.  Adding in additional variables to the classic models of Chlorophyl *a* based trophic state improves predictions only by a small percentage.  These results suggest that when *in situ* data are availble, additional variables do not appreciable improve predictions of trophic state.  Additionally, reliable predictions of trophic state are possible without *in situ* data allowing for a much broader application of trophic state models than has been previously applied.  
 
 
 
@@ -42,20 +41,19 @@ The NLA data were collected during the summer of 2007 and the final data were re
 
 
 
-
 Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data to examine the possible landscape-level drivers of trophic status in lakes.  The NLCD is a nationally collected land use land cover dataset that also provides estimates of impervious surface.  We collected total land use land cover and total percent impervious surface within the surroundin landscape of the lake [TABLE REF].  We defined the surrounding landscape of a lake with three different buffer distances: 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects.  Lastly, lake morphometry is often linked to the productivity of a lake (NEED REF).  To account for this, we included a recently released dataset on lake morphometry (Hollister PUBLISH THIS YOU MOFO). 
 
 ### Defining Trophic State
 
 The dependent variable for this effort is lake trophic state.  Trophic state is usually defined over four levels: oligotrphic, mesotrophic, eutorphic, and hypereutrophic.  Commonly, cut-off values for each of these four levels may be specified with nitrogen concnetration, phosphorus concentration, secchi depth, or chlorphyll a concentration [@carlson1977trophic;@usepa2009national].  As this study is based largely from the NLA we use the NLA definition of trophic state based on the chlorophyll a concentrations (Table).  Additionally, a common need for managment is to identify lakes that are in the greatest need of managment.  Most of the mangement needs (e.g. cyanobacteria, low disolved oxygen, general HABs, etc.) are associated with the most eutrophic conditions.  As such, we also build models for two classes, hypereutrophic and non-hyperutrophic.
 
-|Trophic State   |Hypereutrophic Classes  |Cut-off  |
-|:---------------|:-----------------------|:--------|
-|oligotrophic    |Non-Hypereutrophic      |<= 0.2   |
-|mesotrophic     |Non-Hypereutrophic      |>2-7     |
-|eutrophic       |Non-Hypereutrophic      |>7-30    |
-|hypereutrophic  |Hypereutrophic          |>30      |
 
+|Trophic State  |Hypereutrophic Classes |Cut-off |
+|:--------------|:----------------------|:-------|
+|oligotrophic   |Non-Hypereutrophic     |<= 0.2  |
+|mesotrophic    |Non-Hypereutrophic     |>2-7    |
+|eutrophic      |Non-Hypereutrophic     |>7-30   |
+|hypereutrophic |Hypereutrophic         |>30     |
 
 ### Predicting Trophic State from Classic Linear Models
 
@@ -70,17 +68,9 @@ We use these to predict Chl *a*, then convert observed and predicted Chl *a* to 
 
 Random forest is a machine learning algorithm that aggregates numerous decision trees in order to obtain a consensus prediction of the response categories [@breiman2001random].  Bootstrapped sample data is recursively partitioned according to a given random subset of predictor variables and completely grown without pruning.   With each new tree, both the sample data and predictor variable subset is randomly selected.  
 
-While random forests are able to handle numerous correlated variables without a decrease in prediction accuracy, unusually large numbers of related variables can reduce accuracy and increase the chances of over-fitting the model.  This is a problem often faced in genetics.  In that field, a variable selection method based on random forest has been succesfully applied (NEED REF).  We use varselRF in R to initially examine the importance of the variables and select a subset, the reduced model, to then pass to random forest. Details on how we conducted the analyses are availble in the R package associated with the manuscript `hkm` availble via Github (citation for Github Repo)
+While random forests are able to handle numerous correlated variables without a decrease in prediction accuracy, unusually large numbers of related variables can reduce accuracy and increase the chances of over-fitting the model.  This is a problem often faced in gene selection and in that field, a variable selection method based on random forest has been succesfully applied [@diaz2006gene].  We use varselRF in R to initially examine the importance of the water quality and GIS derived variables and select a subset, the reduced model, to then pass to random forest[@diaz-uriarte2010varSelRF]. 
 
-Using R’s randomForest package, we pass the reduced models selected with varSelRF and calculate confusion matrices, overall accuracy and kappa coeffecient [@liaw2002randomForest].
- 
-
-
-
-
-
-
-
+Using R’s randomForest package, we pass the reduced models selected with varSelRF and calculate confusion matrices, overall accuracy and kappa coeffecient [@liaw2002randomForest].  Details on values used for the parameters of both `randomForest` and `varSelRF` are available from the package `hkm`[NEEDREF].  From the reduced model random forests we collect a consensus prediction and calculate a confusion matrix and summary stats.
 
 Results
 --------
@@ -91,13 +81,53 @@ Results
 - Table
 
 
-
 ### Variable Selection
 
-- Which variables were selected to include, and why, in the Random Forest.  
+- Which variables were selected to include, and why, in the Random Forest. 
+
+
+```
+## snowfall 1.84-6 initialized (using snow 0.3-13): parallel execution on 4 CPUs.
+```
+
+```
+## Library varSelRF loaded.
+```
+
+```
+## Library varSelRF loaded in cluster.
+```
+
+```
+## 
+## 
+## |Variable           | Percent|
+## |:------------------|-------:|
+## |AlbersX            |    1.00|
+## |CropsPer_3000m     |    1.00|
+## |EvergreenPer_3000m |    1.00|
+## |MeanDepthCorrect   |    1.00|
+## |WSA_ECO9           |    1.00|
+## |AlbersY            |    0.35|
+## |ELEV_PT            |    0.02|
+```
+
+```
+## 
+## Stopping cluster
+```
+
+
+
+
+
+
+
+
+
+
+
 - Table. 
-
-
 
 
 
