--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -100,31 +100,31 @@ gis_ts4<-iterVarSelRF(hkm2014Data[predictors_gis],TS_CHLA_4,numCore=4,100,
 											vars.drop.num=1,outStr="gis_ts4",time=TRUE)
 ```
 
-```{r GIS_TS3, echo=FALSE, eval=FALSE, cache=TRUE}
+```{r GIS_TS3, echo=FALSE, eval=TRUE, cache=TRUE}
 gis_ts3<-iterVarSelRF(hkm2014Data[predictors_gis],TS_CHLA_3,numCore=4,100,
 											ntree=10000,ntreeIterat=5000,vars.drop.frac=NULL,
 											vars.drop.num=1,outStr="gis_ts3",time=TRUE)
 ```
 
-```{r GIS_TS2, echo=FALSE, eval=FALSE, cache=TRUE}
+```{r GIS_TS2, echo=FALSE, eval=TRUE, cache=TRUE}
 gis_ts2<-iterVarSelRF(hkm2014Data[predictors_gis],TS_CHLA_2,numCore=4,100,
 											ntree=10000,ntreeIterat=5000,vars.drop.frac=NULL,
 											vars.drop.num=1,outStr="gis_ts2",time=TRUE)
 ```
 
-```{r ALL_TS4, echo=FALSE, eval=FALSE, cache=TRUE}
+```{r ALL_TS4, echo=FALSE, eval=FALSE, cache=FALSE}
 all_ts4<-iterVarSelRF(hkm2014Data[predictors_all],TS_CHLA_4,numCore=4,100,
 											ntree=10000,ntreeIterat=5000,vars.drop.frac=NULL,
 											vars.drop.num=1,outStr="all_ts4",time=TRUE)
 ```
 
-```{r ALL_TS3, echo=FALSE, eval=FALSE, cache=TRUE}
+```{r ALL_TS3, echo=FALSE, eval=FALSE, cache=FALSE}
 all_ts3<-iterVarSelRF(hkm2014Data[predictors_all],TS_CHLA_3,numCore=4,100,
 											ntree=10000,ntreeIterat=5000,vars.drop.frac=NULL,
 											vars.drop.num=1,outStr="all_ts3",time=TRUE)
 ```
 
-```{r ALL_TS2, echo=FALSE, eval=FALSE, cache=TRUE}
+```{r ALL_TS2, echo=FALSE, eval=FALSE, cache=FALSE}
 all_ts2<-iterVarSelRF(hkm2014Data[predictors_all],TS_CHLA_2,numCore=4,100,
 											ntree=10000,ntreeIterat=5000,vars.drop.frac=NULL,
 											vars.drop.num=1,outStr="all_ts2",time=TRUE)
