--- a/hkm2014.md
+++ b/hkm2014.md
@@ -118,8 +118,80 @@ Results
 ```
 
 
+```
+## snowfall 1.84-6 initialized (using snow 0.3-13): parallel execution on 4 CPUs.
+```
+
+```
+## Library varSelRF loaded.
+```
+
+```
+## Library varSelRF loaded in cluster.
+```
+
+```
+## 
+## 
+## |   |Variable           | Percent|
+## |:--|:------------------|-------:|
+## |1  |AlbersX            |    1.00|
+## |2  |AlbersY            |    1.00|
+## |3  |CropsPer_3000m     |    1.00|
+## |7  |EvergreenPer_3000m |    1.00|
+## |8  |MaxDepthCorrect    |    1.00|
+## |9  |MeanDepthCorrect   |    1.00|
+## |11 |WSA_ECO9           |    1.00|
+## |6  |ELEV_PT            |    0.97|
+## |4  |DeciduousPer_3000m |    0.94|
+## |10 |ShrubPer_3000m     |    0.21|
+## |12 |WoodyWetPer_3000m  |    0.11|
+## |5  |DevOpenPer_3000m   |    0.10|
+## |13 |VolumeCorrect      |    0.04|
+```
+
+```
+## 
+## Stopping cluster
+```
 
 
+```
+## snowfall 1.84-6 initialized (using snow 0.3-13): parallel execution on 4 CPUs.
+```
+
+```
+## Library varSelRF loaded.
+```
+
+```
+## Library varSelRF loaded in cluster.
+```
+
+```
+## 
+## 
+## |   |Variable            | Percent|
+## |:--|:-------------------|-------:|
+## |1  |AlbersX             |    1.00|
+## |3  |CropsPer_3000m      |    1.00|
+## |4  |DDs45               |    1.00|
+## |6  |ELEV_PT             |    1.00|
+## |7  |EvergreenPer_3000m  |    1.00|
+## |9  |MeanDepthCorrect    |    1.00|
+## |10 |WSA_ECO9            |    1.00|
+## |2  |AlbersY             |    0.98|
+## |8  |MaxDepthCorrect     |    0.98|
+## |5  |DeciduousPer_3000m  |    0.92|
+## |12 |DevOpenPer_3000m    |    0.67|
+## |11 |BASINAREA           |    0.31|
+## |13 |PercentImperv_3000m |    0.01|
+```
+
+```
+## 
+## Stopping cluster
+```
 
 
 
